2010-06-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libnetworking/rtems/ftpfs.h, libnetworking/lib/ftpfs.c:  Added
	rtems_ftpfs_mount() again.  Documentation.

2010-06-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio.h, sapi/include/confdefs.h: Added
	and use defines for file system types.

2010-06-09	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/src/mount.c: Fixed NULL pointer access.

2010-06-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am, configure.ac: Remove support for shttpd.
	* aclocal/enable-shttpd.m4: Remove.

2010-06-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* Makefile.am, configure.ac: Remove support for httpd (GoAhead).
	* aclocal/enable-httpd.m4: Remove.

2010-06-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libcsupport/include/rtems/libio.h: Documentation.

2010-06-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/imfs/imfs_creat.c: Reject creation of FIFOs if support is
	disabled.

2010-06-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	PR 1524/filesystem
	* libcsupport/src/rtems_mkdir.c: New file.
	* libcsupport/src/Makefile.am: Reflect change above.
	* libcsupport/include/rtems/libio.h: Added rtems_mkdir().
	* libmisc/fsmount/fsmount.h, libmisc/fsmount/fsmount.c,
	libblock/src/bdpart-mount.c, libnetworking/rtems/mkrootfs.h,
	libnetworking/rtems/mkrootfs.c, libfs/src/pipe/pipe.c: Use
	rtems_mkdir().  Removed rtems_fsmount_create_mount_point() and
	rtems_rootfs_mkdir().

2010-06-08	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* libfs/src/imfs/fifoimfs_init.c: New file.
	* libfs/Makefile.am: Reflect change above.
	* libfs/src/imfs/imfs.h, libfs/src/imfs/imfs_eval.c,
	libfs/src/imfs/imfs_init.c, libfs/src/imfs/imfs_initsupp.c,
	libfs/src/imfs/miniimfs_init.c, libfs/src/pipe/fifo.c,
	libfs/src/pipe/pipe.c, libfs/src/pipe/pipe.h: Pipe support is now
	link-time optional.