@@ -704,6 +704,25 @@ int mount(
   const void                 *data
 );
 
+/**
+ * @brief Mounts a file system and makes the @a target path.
+ *
+ * The @a target path will be created with rtems_mkdir() and must not be
+ * @c NULL.
+ *
+ * @see mount().
+ *
+ * @retval 0 Successful operation.
+ * @retval -1 An error occured.  The @c errno indicates the error.
+ */
+int mount_and_make_target_path(
+  const char                 *source,
+  const char                 *target,
+  const char                 *filesystemtype,
+  rtems_filesystem_options_t options,
+  const void                 *data
+);
+
 /*
  *  Boot Time Mount Table Structure
  */
@@ -736,7 +755,7 @@ extern  rtems_fs_init_functions_t    rtems_fs_init_helper;
  * The @a mode value selects the access permissions of the directory.
  *
  * @retval 0 Successful operation.
- * @retval -1 An error occured.  @c errno indicates the error.
+ * @retval -1 An error occured.  The @c errno indicates the error.
  */
 extern int rtems_mkdir(const char *path, mode_t mode);
 
